Added various localizations.

--- a/app/views/homepage/contact.html.erb
+++ b/app/views/homepage/contact.html.erb
@@ -1,9 +1,9 @@
-<% @page_title = "Contact Us" %>
+<% @page_title = t('contact.label') %>
 <div id="static_holder" class="container-fluid contact-us">
   <div class="row">
     <div class="col-xs-12 static_holder_content_container">
       <div id="static_holder_content" class="static_holder_content">
-        <h2>Contact Us</h2>
+        <h2><%= t('contact.label') %></h2>
         <div class="info_section">
 
         <p><%= t('contact.message_html') %></p>
