--- a/app/views/vocabulary/edit.html.erb
+++ b/app/views/vocabulary/edit.html.erb
@@ -2,12 +2,12 @@
 <% disabled_versions = @term.edit_requests.reject{|er| er.vote_status != "approved"}.pluck(:version_release_id) %>
 <div class="row-padded">
   <h1><%= t('term.edit_term') %></h1>
-  <%= button_to "Back To Term", vocabulary_show_path(vocab_id: @vocab_id, id: params[:id]), :method => "get", class: 'btn text-bg-primary' %>
+  <%= button_to t('discussion.back_to_term') , vocabulary_show_path(vocab_id: @vocab_id, id: params[:id]), :method => "get", class: 'btn text-bg-primary' %>
   <br/>
   <div style="width:50em;">
     <%= simple_form_for(@term, :url => vocabulary_term_update_path(vocab_id: @vocab_id, id: @term.identifier), :as => :term, method: :patch) do |f| %>
     <div class="input-group">
-      <label class="input-group-text" for="version_release"> Version</label>
+      <label class="input-group-text" for="version_release"> <%= t('release.label') %></label>
       <%= select_tag "version_release", options_for_select(available_versions.pluck(:release_identifier, :id), selected: @release_id_num, disabled: disabled_versions), class: "form-select", onchange: "window.location.href='#{request.original_url.split('edit')[0] + 'edit/'}' + $(this).find('option:selected').text()" %>
     </div>
       <%= render :partial => "form_id", :locals => {:f => f, :key=>:identifier} %>
@@ -15,7 +15,7 @@
       <div>
 		
         <%= button_tag class: 'btn btn-primary btn-lg', id: "upload_submit", name: "update_descriptions", data: { disable_with: "Please wait..." } do %>
-          <i class="glyphicon glyphicon-floppy-disk"></i> Edit Term
+          <i class="glyphicon glyphicon-floppy-disk"></i> <%= t('misc.post') %>
         <% end %>
       </div>
     <% end %>
