Localizations for alternative download formats

--- a/app/views/vocabulary/index.html.erb
+++ b/app/views/vocabulary/index.html.erb
@@ -42,7 +42,7 @@
 
 </ul>
 
-<p><br/><strong>Other Formats:</strong> <%= link_to "N-Triples", request.original_url + '.nt'  %>, <%= link_to "JSON-LD", request.original_url + '.jsonld' %>, <%= link_to "TTL", request.original_url + '.ttl' %>, <%= link_to "CSV (Split by Tabs only)", request.original_url + '.csv' %>, <%= link_to "XML", request.original_url + '.xml' %>
-<p><br/><strong>Experimental Upcoming Formats With Language Labels:</strong> <%= link_to "N-Triples", request.original_url + '.ntV2'  %>, <%= link_to "JSON-LD", request.original_url + '.jsonldV2' %>, <%= link_to "TTL", request.original_url + '.ttlV2' %>
+<p><br/><strong><%= t('term.other_formats') %>:</strong> <%= link_to "N-Triples", request.original_url + '.nt'  %>, <%= link_to "JSON-LD", request.original_url + '.jsonld' %>, <%= link_to "TTL", request.original_url + '.ttl' %>, <%= link_to "CSV (Split by Tabs only)", request.original_url + '.csv' %>, <%= link_to "XML", request.original_url + '.xml' %>
+<p><br/><strong><%= t('term.other_formats_legacy') %>:</strong> <%= link_to "N-Triples", request.original_url + '.ntV2'  %>, <%= link_to "JSON-LD", request.original_url + '.jsonldV2' %>, <%= link_to "TTL", request.original_url + '.ttlV2' %>
 
 
