--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,17 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark navbar-fixed-top navbar-expand-lg" role="navigation">
-  <div class="container">
+  <div class="container-lg">
     
     <div class="navbar-header">
-      <a class="navbar-brand">
-	<%= image_tag("homosaurus_small.png", height: '40px') %>
-      </a>
-      <%= link_to "homosaurus.org", '/', class: "navbar-brand text-white" %>
+      <div id="logo_holder">
+	<a class="navbar-brand m-0">
+
+	  <%= image_tag("homosaurus_small.png", height: '40px') %>
+	</a>
+      </div>
+
+      <%= link_to "HOMOSAURUS", '/', class: "navbar-brand text-white" %>
       
       <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> -->
       <!--   <span class="sr-only">Toggle navigation</span> -->
@@ -25,11 +29,12 @@
       <!--   <span class="icon-bar"></span> -->
       <!-- </button> -->
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div id="navbarSupportedContent" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+    <div id="navbarSupportedContent" class="offcanvas offcanvas-end bg-dark" style="flex-grow: inherit;" data-bs-theme="dark">
+      <button type="button" class="btn-close d-lg-none p-4" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <ul class="nav navbar-nav text-end text-lg-start p-4 p-lg-0">
         <li class="nav-item"><%= link_to t("menu.home"), '/', :class => "nav-link text-white" %></li>
 
         <% if request.original_url.include? '/terms' %>
@@ -104,7 +109,7 @@
 </nav>
 
 <div class="container-full" style="margin-top:50px;">
-  <div class="container">
+  <div class="container-lg">
     <div class="starter-template">
       <div class="flash_messages">
 	<% if not current_user.present? %>
