--- a/app/views/vocabulary/show.html.erb
+++ b/app/views/vocabulary/show.html.erb
@@ -1,13 +1,14 @@
 <%
   form_class = "btn p-0"
-  editing_disabled = (VersionRelease.where(status: "Pending").count == 0)
   latest_vr_id = VersionRelease.where(status: "Published")[-1].id
   if @homosaurus_obj.visibility == "pending"
     latest_vr_id = VersionRelease.last.id
   end
   vr_relations = @homosaurus_obj.get_relationships_at_version_release(latest_vr_id, full_lang = true)
+  upcoming_redirect_status = @homosaurus_obj.get_relationship_at_version_release(Relation::Redirects_to, VersionRelease.last.id)
+  awaiting_deletion = upcoming_redirect_status.count > 0 and upcoming_redirect_status[0][1] == "0"
+  editing_disabled = (VersionRelease.where(status: "Pending").count == 0) || awaiting_deletion
   %>
-
 <h2><%= @homosaurus_obj.pref_label_localized.data %> (<%= @homosaurus_obj.uri %>)</h2>
 <% if @homosaurus_obj.visibility == "deleted" %>
   <div class="alert alert-danger" role="alert">
@@ -17,6 +18,10 @@
 <% elsif @homosaurus_obj.visibility == "pending" %>
   <div class="alert alert-danger" role="alert">
     This term is a pending object set to be in the next release.
+  </div>
+<% elsif awaiting_deletion %>
+  <div class="alert alert-danger" role="alert">
+    This term is set to be removed from an upcoming release.
   </div>
 <% end %>
 <p><div style="clear:both;">
@@ -30,13 +35,14 @@
     <%= button_to t("edit_request.view_discussion"), vocabulary_term_discussion_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
   <% end %>
   <% if current_user.present? && current_user.contributor? && request.original_url.include?('/v3') %>
-      <%= button_to t("term.edit_term"), vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", form_class: "#{form_class} btn-tooltip", class: 'btn btn-outline-secondary', disabled: editing_disabled, form: { "title" => editing_disabled ? "No pending releases" : ""} %>
+      <%= button_to t("term.edit_term"), vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", form_class: "#{form_class} btn-tooltip", class: 'btn btn-outline-secondary', disabled: editing_disabled, form: { "title" => awaiting_deletion ? "Awaiting deletion" : (editing_disabled ? "No pending releases" : "")} %>
     <% if @homosaurus_obj.visibility == "deleted" %>
       <%= button_to "Restore Term", vocabulary_term_restore_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => "get", form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to restore #{@homosaurus_obj.pref_label}?" } %>
     <% elsif @homosaurus_obj.visibility == "pending" %>
       <%= button_to "Delete Pending Term", vocabulary_term_delete_version_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete the unpublished #{@homosaurus_obj.pref_label}?" } %>
-    <% else %>
-      <%= button_to t("term.delete_term"), vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete #{@homosaurus_obj.pref_label}?" } %>
+    <% elsif current_user.admin? %>
+    <button class="btn btn-danger"
+	    data-bs-toggle="modal" data-bs-target="#delete-term-modal"><%= t('term.delete_term') %></button>
     <% end %>
     <% if @homosaurus_obj.visibility != "pending" %>
     <button class="btn btn-danger"
@@ -172,15 +178,15 @@
     <div class="modal-content">
       <%= form_with url: request.fullpath + "/replace", method: :get, local: true do |f| %>
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="new-topic-modal-label">Select term to redirect here</h1>
+        <h1 class="modal-title fs-5">Select term to redirect here</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
 	<p>The term you select here will redirect to this record. </p>
 	<select id="vote-select" name="replacement_id" class="form-select">
-	<%= Term.all.where(vocabulary_id: @homosaurus_obj.vocabulary_id).each do |t| %>
+	  <%= Term.all.where(vocabulary_id: @homosaurus_obj.vocabulary_id).each do |t| %>
 	  <option value="<%= t.id %>"><%= t.pref_label %></option>
-	<% end %>
+	  <% end %>
 	</select>
 	<p>The redirect will occur in this version.</p>
 	<select id="vote-select" name="vid" class="form-select">
@@ -188,6 +194,7 @@
 	  <option value="<%= vr.id %>"><%= vr.release_identifier %></option>
 	  <% end %>
 	</select>
+      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-primary">Post</button>
@@ -197,3 +204,31 @@
     </div>
   </div>
 </div>
+
+<div id="delete-term-modal" class="modal modal-lg modal-fullscreen-sm-down"
+     tab-index="-1" aria-hidden="true" aria-labelledby="delete-term-modal-label">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <%= form_with url: vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier), method: :delete, local: true do |f| %>
+      <div class="modal-header">
+        <h1 class="modal-title fs-5"><%= t("term.delete_term") %></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+	<p>Select Version.</p>
+	<select name="release_id" class="form-select">
+	  <%= VersionRelease.where(status: "Pending").each do |vr| %>
+	  <option value="<%= vr.id %>"><%= vr.release_identifier %></option>
+	  <% end %>
+	</select>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-primary">Post</button>
+      </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
+  
