Updated how the terms are linked, auto-links are now handled pre-publication, not post.

--- a/app/views/partials/_edit_request_partial.html.erb
+++ b/app/views/partials/_edit_request_partial.html.erb
@@ -19,7 +19,7 @@ end
   if release_identifier == "unversioned"
     release_identifier = "?"
   end
-  er_status = edit_request.vote_status
+  er_status = edit_request.status
 %>
 
 <div class="card container-lg ">
