--- a/app/views/admin/version_manage.html.erb
+++ b/app/views/admin/version_manage.html.erb
@@ -11,7 +11,7 @@
     <li class="list-group-item">
       <%= "V. #{v.release_identifier} (#{v.release_type}) [#{v.status}]" %>
       <% if v.status == "Pending" %>
-        <%= button_to "Publish", version_publish_path(release_identifier: v.release_identifier), :method => :post, form_class: 'btn p-0', class: 'btn btn-primary', data: { confirm: "Are you sure you want to publish? This can not be undone." } %>
+        <%= button_to "Publish", version_publish_path(release_identifier: v.release_identifier), :method => :post, form_class: 'btn p-0', class: 'btn btn-primary', disabled: v.publishable?, data: { confirm: "Are you sure you want to publish? This can not be undone." } %>
       <% end %>
       <span>Terms added: <%= stats["terms_added"] %></span>,
       <span>Terms modified: <%= stats["terms_modified"] %></span>,
