Bugfix, editing pending new terms should now work.

--- a/app/views/vocabulary/edit.html.erb
+++ b/app/views/vocabulary/edit.html.erb
@@ -1,5 +1,5 @@
 <% available_versions = VersionRelease.where(status: "Pending") %>
-<% disabled_versions = @term.edit_requests.reject{|er| er.vote_status != "approved"}.pluck(:version_release_id) %>
+<% disabled_versions = @term.edit_requests.reject{|er| er.vote_status == "approved"}.pluck(:version_release_id) %>
 <div class="row-padded">
   <h1><%= t('term.edit_term') %></h1>
   <%= button_to t('discussion.back_to_term') , vocabulary_show_path(vocab_id: @vocab_id, id: params[:id]), :method => "get", class: 'btn text-bg-primary' %>
