Updated migration to account for 3.6.0 being published. Added history note, contributors, and sources into version tracking system.

--- a/app/views/vocabulary/_form.html.erb
+++ b/app/views/vocabulary/_form.html.erb
@@ -64,7 +64,19 @@
 	%>
     <%= f.input "relation_#{Relation::Lcsh_close}", as: :lcsh_lookup, collection: vr_relations[Relation::Lcsh_close], collection2: @LCSH_types,
                 input_html: { class: 'form-control',  multiple: false }, include_blank: true, label: t("relations.#{Relation::Lcsh_close}")
-    %>        
+    %>
 
+    <%= f.input "relation_#{Relation::History_note}", collection: vr_relations[Relation::History_note], as: :language_labels_mei,
+                input_html: { rows: '4', type: 'textarea' },
+                required: true, readonly:false, label: t("relations.#{Relation::History_note}")
+	%>
+    <%= f.input "relation_#{Relation::Contributors}", collection: vr_relations[Relation::Contributors], as: :language_labels_mei,
+                input_html: { rows: '4', type: 'textarea' },
+                required: true, readonly:false, label: t("relations.#{Relation::Contributors}")
+	%>
+    <%= f.input "relation_#{Relation::Sources}", collection: vr_relations[Relation::Sources], as: :language_labels_mei,
+                input_html: { rows: '4', type: 'textarea' },
+                required: true, readonly:false, label: t("relations.#{Relation::Sources}")
+	%>    
 
     <br /><br />
