--- a/app/views/vocabulary/_form.html.erb
+++ b/app/views/vocabulary/_form.html.erb
@@ -17,7 +17,28 @@
 	  $p.append($hid_inp);
 	  var $del_button = $($p.children()[3]).find('button');
 	  $del_button.prop('disabled', true);
-      })
+      });
+
+      $('select.lcsh-picker').change(function(){
+	  var me = $(this);
+	  console.log(me);
+	  console.log(me.val());
+	  if(me.val() == "-1"){
+	      var new_uri = prompt("Please paste LCSH URI if not cached");
+	      $.post( "/add_lcsh.json", {uri: new_uri}, function(data){
+		  var pd = $.parseJSON(data);
+		  $('select.lcsh-picker').each(function(){
+		      var new_opt = '<option value="' + pd.value + '">' + pd.text + '</option>';
+		      $(this).append($(new_opt));
+		      $(this).selectpicker("destroy");
+		      $(this).selectpicker();
+		  });
+		  console.log("here");
+		  me.selectpicker("val", new_uri);
+	      }, "text");
+	      
+	  };
+      });
   })
   //$.fn.modal.Constructor.prototype.enforceFocus = function() {};
 
@@ -60,10 +81,10 @@
                 input_html: { class: 'form-control', include_help: 'Related terms for this term.', help_label: 'Related', multiple: false }, include_blank: true, label: t("relations.#{Relation::Related}")
 	%>
     <%= f.input "relation_#{Relation::Lcsh_exact}", as: :lcsh_lookup, collection: vr_relations[Relation::Lcsh_exact], collection2: @LCSH_types,
-                input_html: { class: 'form-control',  multiple: false }, include_blank: true, label: t("relations.#{Relation::Lcsh_exact}")
+                input_html: { class: 'form-control lcsh-picker',  multiple: false }, include_blank: true, label: t("relations.#{Relation::Lcsh_exact}")
 	%>
     <%= f.input "relation_#{Relation::Lcsh_close}", as: :lcsh_lookup, collection: vr_relations[Relation::Lcsh_close], collection2: @LCSH_types,
-                input_html: { class: 'form-control',  multiple: false }, include_blank: true, label: t("relations.#{Relation::Lcsh_close}")
+                input_html: { class: 'form-control lcsh-picker',  multiple: false }, include_blank: true, label: t("relations.#{Relation::Lcsh_close}")
     %>
 
     <%= f.input "relation_#{Relation::History_note}", collection: vr_relations[Relation::History_note], as: :language_labels_mei,
